--- a/package.yaml
+++ b/package.yaml
@@ -7,6 +7,7 @@ dependencies:
 - yesod >=1.6 && <1.7
 - yesod-core >=1.6 && <1.7
 - yesod-auth >=1.6 && <1.7
+- yesod-auth-oauth2
 - yesod-static >=1.6 && <1.7
 - yesod-form >=1.6 && <1.7
 - classy-prelude >=1.5 && <1.6
@@ -42,6 +43,8 @@ dependencies:
 - case-insensitive
 - wai
 - foreign-store
+- markdown
+- yesod-text-markdown
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
